--- a/WebContent/WEB-INF/template/header.xhtml
+++ b/WebContent/WEB-INF/template/header.xhtml
@@ -1,3 +1,6 @@
-<ui:composition xmlns:ui="http://xmlns.jcp.org/jsf/faceletes">
-	<h1>Header da hora maluco</h1>
+<ui:composition xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:f="http://java.sun.com/jsf/core">
+	<h1>Olá </h1>
 </ui:composition>
