--- a/WebContent/WEB-INF/template/footer.xhtml
+++ b/WebContent/WEB-INF/template/footer.xhtml
@@ -1,3 +1,3 @@
-<ui:composition xmlns:ui="http://xmlns.jcp.org/jsf/faceletes">
-	<h1>Footer da hora maluco</h1>
+<ui:composition xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+	<p>Desenvolvido por <SPAN>cassio.alves09@gmail.com</SPAN> </p>
 </ui:composition>
