--- a/WebContent/WEB-INF/template/layout.xhtml
+++ b/WebContent/WEB-INF/template/layout.xhtml
@@ -1,27 +1,29 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core"
-	 xmlns:p="http://primefaces.org/ui">
-<head>
-</head>
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+	xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:p="http://primefaces.org/ui"
+>
+<h:head>
+	<title>Sistem online</title>
+	<h:outputStylesheet name="css/estilo.css"/>
+</h:head>
 <h:body>
-	<div id="topo">
-		<ui:insert>
+	<div id="topo" class="topo-container">
+		<ui:insert name="topo">
 			<ui:include src="header.xhtml" />
 		</ui:insert>
 	</div>
-	<div id="content">
-		<ui:insert>
+	<div id="content"  class="center-container">
+		<ui:insert name="content">
 			<ui:insert name="content">
 			
 			</ui:insert>
 		</ui:insert>
 	</div>
-	<div id="footer">
-		<ui:insert>
+	<div class="vertical-container" >
+		<ui:insert name="footer">
 			<ui:include src="footer.xhtml" />
 		</ui:insert>
 	</div>
